--- a/facts/education.html
+++ b/facts/education.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <title>Education</title>
-    <link rel="stylesheet" href="/shared.css">
+    <link rel="stylesheet" href="../shared.css">
 </head>
 
 <body>
