--- a/facts/index.html
+++ b/facts/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Facts</title>
-    <link rel="stylesheet" href="/shared.css">
+    <link rel="stylesheet" href="../shared.css">
 </head>
 
 <body>
