--- a/facts/personal.html
+++ b/facts/personal.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal</title>
-    <link rel="stylesheet" href="/shared.css">
-    <script src="/shared.js"></script>
+    <link rel="stylesheet" href="../shared.css">
+    <script src="../shared.js"></script>
 </head>
 
 <body>
