switch to explicit file reference for links for github pages

--- a/cvs/edit.html
+++ b/cvs/edit.html
@@ -143,7 +143,7 @@
         <br>
         <nav class="auto-rows">
             <a href="/cvs/">/cvs</a>
-            <a href="/">/</a>
+            <a href="/index.html">/</a>
         </nav>
     </main>
 </body>
