--- a/cvs/index.html
+++ b/cvs/index.html
@@ -37,7 +37,7 @@
         </output>
         <hr>
         <nav class="auto-rows">
-            <a href="/">/</a>
+            <a href="/index.html">/</a>
         </nav>
     </main>
     <script>
