--- a/facts/index.html
+++ b/facts/index.html
@@ -49,7 +49,7 @@
                     <a data-section="references" href="/facts/references.html">/facts/references</a>
                 </div>
 
-                <a href="/">/</a>
+                <a href="/index.html">/</a>
             </nav>
         </form>
 
