--- a/facts/jobs/edit.html
+++ b/facts/jobs/edit.html
@@ -75,7 +75,7 @@
         <nav class="auto-rows">
             <a href="/facts/jobs.html">/facts/jobs/</a>
             <a href="/facts/">/facts</a>
-            <a href="/">/</a>
+            <a href="/index.html">/</a>
 
         </nav>
     </main>
