--- a/facts/skills/edit.html
+++ b/facts/skills/edit.html
@@ -66,7 +66,7 @@
         <nav class="auto-rows">
             <a href="/facts/skills.html">/facts/skills/</a>
             <a href="/facts/">/facts</a>
-            <a href="/">/</a>
+            <a href="/index.html">/</a>
         </nav>
     </main>
 </body>
