--- a/facts/summary.html
+++ b/facts/summary.html
@@ -37,7 +37,7 @@
         <br>
         <nav class="auto-rows">
             <a href="/facts/">/facts/</a>
-            <a href="/">/</a>
+            <a href="/index.html">/</a>
         </nav>
     </main>
     <script>
