--- a/cvs/jobs.html
+++ b/cvs/jobs.html
@@ -36,7 +36,7 @@
         <nav class="auto-rows">
             <a href="/cvs/edit.html" class="back">/cvs/edit</a>
             <a href="/cvs/">/cvs</a>
-            <a href="/"></a>
+            <a href="/index.html"></a>
         </nav>
         <hr>
         <nav class="auto-rows">
