--- a/cvs/jobs/edit.html
+++ b/cvs/jobs/edit.html
@@ -64,7 +64,7 @@
             <a href="/cvs/jobs.html" class="back">/cvs/jobs/</a>
             <a href="/cvs/edit.html" class="back">/cvs/edit/</a>
             <a href="/cvs/">/cvs</a>
-            <a href="/">/</a>
+            <a href="/index.html">/</a>
         </nav>
     </main>
     <script>
