--- a/cvs/summary.html
+++ b/cvs/summary.html
@@ -61,7 +61,7 @@
         <nav class="auto-rows">
             <a class="back" href="/cvs/edit.html">/cvs/edit</a>
             <a href="/cvs/">/cvs</a>
-            <a href="/">/</a>
+            <a href="/index.html">/</a>
         </nav>
     </main>
     <script>
