--- a/facts/education.html
+++ b/facts/education.html
@@ -36,7 +36,7 @@
         <hr>
         <nav class="auto-rows">
             <a href="/facts/">/facts</a>
-            <a href="/">/</a>
+            <a href="/index.html">/</a>
         </nav>
     </main>
     <script>
