--- a/facts/education/edit.html
+++ b/facts/education/edit.html
@@ -76,7 +76,7 @@
         <nav class="auto-rows">
             <a href="/facts/education.html">/facts/education/</a>
             <a href="/facts/">/facts</a>
-            <a href="/">/</a>
+            <a href="/index.html">/</a>
         </nav>
     </main>
 </body>
