--- a/facts/interests/edit.html
+++ b/facts/interests/edit.html
@@ -62,7 +62,7 @@
         <nav class="auto-rows">
             <a href="/facts/interests.html">/facts/interests/</a>
             <a href="/facts/">/facts</a>
-            <a href="/">/</a>
+            <a href="/index.html">/</a>
         </nav>
     </main>
 </body>
