--- a/facts/jobs.html
+++ b/facts/jobs.html
@@ -35,7 +35,7 @@
         <hr>
         <nav class="auto-rows">
             <a href="/facts/">/facts</a>
-            <a href="/">/</a>
+            <a href="/index.html">/</a>
         </nav>
     </main>
     <script>
