--- a/styles/edit.html
+++ b/styles/edit.html
@@ -149,7 +149,7 @@
         <br>
         <nav class="auto-rows">
             <a href="/styles/">/styles</a>
-            <a href="/">/</a>
+            <a href="/index.html">/</a>
         </nav>
     </main>
 </body>
