--- a/styles/index.html
+++ b/styles/index.html
@@ -38,7 +38,7 @@
         </output>
         <hr>
         <nav class="auto-rows">
-            <a href="/">/</a>
+            <a href="/index.html">/</a>
         </nav>
     </main>
     <script>
