--- a/facts/personal.html
+++ b/facts/personal.html
@@ -51,8 +51,8 @@
         </script>
         <br>
         <nav class="auto-rows">
-            <a href="/facts/">/facts/</a>
-            <a href="/index.html">/</a>
+            <a href="./facts/">/facts/</a>
+            <a href="./index.html">/</a>
         </nav>
     </main>
     <script>
