--- a/facts/skills/edit.html
+++ b/facts/skills/edit.html
@@ -64,9 +64,9 @@
         </script>
         <br>
         <nav class="auto-rows">
-            <a href="/facts/skills.html">/facts/skills/</a>
-            <a href="/facts/">/facts</a>
-            <a href="/index.html">/</a>
+            <a href="./facts/skills.html">/facts/skills/</a>
+            <a href="./facts/">/facts</a>
+            <a href="./index.html">/</a>
         </nav>
     </main>
 </body>
