--- a/facts/index.html
+++ b/facts/index.html
@@ -16,37 +16,37 @@
             <nav id="sections" class="auto-rows">
                 <div class="section" data-category="personal">
                     <input type="checkbox" id="personal" name="personal" value="personal" checked>
-                    <a data-section="personal" href="./facts/personal.html">/facts/personal</a>
+                    <a data-section="personal" href="./personal.html">/facts/personal</a>
                 </div>
 
                 <div class="section" data-category="summary">
                     <input type="checkbox" id="summary" name="summary" value="summary" checked>
-                    <a data-section="summary" href="./facts/summary.html">/facts/summary</a>
+                    <a data-section="summary" href="./summary.html">/facts/summary</a>
                 </div>
 
                 <div class="section" data-category="jobs">
                     <input type="checkbox" id="jobs" name="jobs" value="jobs" checked>
-                    <a data-section="jobs" href="./facts/jobs.html">/facts/jobs</a>
+                    <a data-section="jobs" href="./jobs.html">/facts/jobs</a>
                 </div>
 
                 <div class="section" data-category="educations">
                     <input type="checkbox" id="educations" name="educations" value="educations" checked>
-                    <a data-section="educations" href="./facts/education.html">/facts/education</a>
+                    <a data-section="educations" href="./education.html">/facts/education</a>
                 </div>
 
                 <div class="section" data-category="skills">
                     <input type="checkbox" id="skills" name="skills" value="skills" checked>
-                    <a data-section="skills" href="./facts/skills.html">/facts/skills</a>
+                    <a data-section="skills" href="./skills.html">/facts/skills</a>
                 </div>
 
                 <div class="section" data-category="interests">
                     <input type="checkbox" id="interests" name="interests" value="interests" checked>
-                    <a data-section="interests" href="./facts/interests.html">/facts/interests</a>
+                    <a data-section="interests" href="./interests.html">/facts/interests</a>
                 </div>
 
                 <div class="section" data-category="references">
                     <input type="checkbox" id="references" name="references" value="references" checked>
-                    <a data-section="references" href="./facts/references.html">/facts/references</a>
+                    <a data-section="references" href="./references.html">/facts/references</a>
                 </div>
 
                 <a href="./index.html">/</a>
