hopefully fix more paths

--- a/facts/index.html
+++ b/facts/index.html
@@ -49,7 +49,7 @@
                     <a data-section="references" href="./references.html">/facts/references</a>
                 </div>
 
-                <a href="./index.html">/</a>
+                <a href="../index.html">/</a>
             </nav>
         </form>
 
