--- a/facts/skills.html
+++ b/facts/skills.html
@@ -42,8 +42,8 @@
         </output>
         <hr>
         <nav class="auto-rows">
-            <a href="./facts/">/facts</a>
-            <a href="./index.html">/</a>
+            <a href="./">/facts</a>
+            <a href="../index.html">/</a>
         </nav>
     </main>
     <script>
