--- a/facts/summary.html
+++ b/facts/summary.html
@@ -36,8 +36,8 @@
         </script>
         <br>
         <nav class="auto-rows">
-            <a href="./facts/">/facts/</a>
-            <a href="./index.html">/</a>
+            <a href="./">/facts/</a>
+            <a href="../index.html">/</a>
         </nav>
     </main>
     <script>
