--- a/facts/education.html
+++ b/facts/education.html
@@ -14,12 +14,12 @@
         <h1>/facts/education</h1>
         <hr>
         <nav class="auto-rows">
-            <a href="/facts/education/edit.html">/facts/education/new</a>
+            <a href="./education/edit.html">/facts/education/new</a>
         </nav>
         <hr>
         <template id="education">
             <div class="education" style="display:flex; flex-direction: column;">
-                <a class="id" href="/facts/education/edit.html">
+                <a class="id" href="./education/edit.html">
                     <span class="path"></span>
                     <br>
                     <span class="file"></span>
