--- a/facts/jobs.html
+++ b/facts/jobs.html
@@ -13,12 +13,12 @@
         <h1>/facts/jobs</h1>
         <hr>
         <nav class="auto-rows">
-            <a href="/facts/jobs/edit.html">/facts/jobs/new</a>
+            <a href="./jobs/edit.html">/facts/jobs/new</a>
         </nav>
         <hr>
         <template id="job">
             <div class="job" style="display:flex; flex-direction: column;">
-                <a class="id" href="/facts/jobs/edit.html">
+                <a class="id" href="./jobs/edit.html">
                     <span class="path"></span>
                     <br>
                     <span class="file"></span>
