--- a/facts/jobs/edit.html
+++ b/facts/jobs/edit.html
@@ -73,9 +73,9 @@
         </script>
         <br>
         <nav class="auto-rows">
-            <a href="/facts/jobs.html">/facts/jobs/</a>
-            <a href="/facts/">/facts</a>
-            <a href="/index.html">/</a>
+            <a href="../jobs.html">/facts/jobs/</a>
+            <a href="../">/facts</a>
+            <a href="../../">/</a>
 
         </nav>
     </main>
