--- a/facts/education/edit.html
+++ b/facts/education/edit.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>/facts/education/edit</title>
     <link rel="stylesheet" href="../../shared.css">
-    <script src="../..//shared.js"></script>
+    <script src="../../shared.js"></script>
 </head>
 
 <body>
@@ -74,9 +74,9 @@
         </script>
         <br>
         <nav class="auto-rows">
-            <a href="/facts/education.html">/facts/education/</a>
-            <a href="/facts/">/facts</a>
-            <a href="/index.html">/</a>
+            <a href="../education.html">/facts/education/</a>
+            <a href="../">/facts</a>
+            <a href="../../">/</a>
         </nav>
     </main>
 </body>
