--- a/styles/edit.html
+++ b/styles/edit.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>/styles/edit</title>
-    <link rel="stylesheet" href="/shared.css">
-    <script src="/shared.js"></script>
+    <link rel="stylesheet" href="../shared.css">
+    <script src="../shared.js"></script>
 </head>
 
 <body>
@@ -24,27 +24,27 @@
 
                 <div class="section" data-category="layout">
                     <input type="checkbox" id="layout" name="layout" value="layout" checked>
-                    <a data-section="layout" href="/styles/layout/edit.html">/styles/layout</a>
+                    <a data-section="layout" href="./layout/edit.html">/styles/layout</a>
                 </div>
 
                 <div class="section" data-category="fonts">
                     <input type="checkbox" id="fonts" name="fonts" value="fonts" checked>
-                    <a data-section="fonts" href="/styles/fonts/edit.html">/styles/fonts</a>
+                    <a data-section="fonts" href="./fonts/edit.html">/styles/fonts</a>
                 </div>
 
                 <div class="section" data-category="colors">
                     <input type="checkbox" id="colors" name="colors" value="colors" checked>
-                    <a data-section="colors" href="/styles/colors.html">/styles/colors</a>
+                    <a data-section="colors" href="./colors/edit.html">/styles/colors</a>
                 </div>
 
                 <div class="section" data-category="spacing">
                     <input type="checkbox" id="spacing" name="spacing" value="spacing" checked>
-                    <a data-section="spacing" href="/styles/spacing.html">/styles/spacing</a>
+                    <a data-section="spacing" href="./spacing/edit.html">/styles/spacing</a>
                 </div>
 
                 <div class="section" data-category="borders">
                     <input type="checkbox" id="borders" name="borders" value="borders" checked>
-                    <a data-section="borders" href="/styles/borders.html">/styles/borders</a>
+                    <a data-section="borders" href="./borders/edit.html">/styles/borders</a>
                 </div>
 
             </nav>
@@ -148,8 +148,8 @@
         </script>
         <br>
         <nav class="auto-rows">
-            <a href="/styles/">/styles</a>
-            <a href="/index.html">/</a>
+            <a href="./">/styles</a>
+            <a href="../">/</a>
         </nav>
     </main>
 </body>
