--- a/styles/index.html
+++ b/styles/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>/styles</title>
-    <link rel="stylesheet" href="/shared.css">
-    <script src="/shared.js"></script>
+    <link rel="stylesheet" href="../shared.css">
+    <script src="../shared.js"></script>
 </head>
 
 <body>
@@ -14,18 +14,18 @@
         <h1>/styles</h1>
         <hr>
         <nav class="auto-rows">
-            <a href="/styles/edit.html">/style/new</a>
+            <a href="./edit.html">/style/new</a>
         </nav>
         <hr>
         <template id="style">
             <div class="style" style="display:flex; flex-direction: column;">
-                <a class="id" href="/styles/edit.html" style="display: flex;">
+                <a class="id" href="./edit.html" style="display: flex;">
                     <span class="path"></span>
                     <span class="file"></span>
                 </a>
                 <span class="name"></span>
                 <span class="created"></span>
-                <a href="/cvs/preview.html" class="preview" style="display: flex;">
+                <a href="../cvs/preview.html" class="preview" style="display: flex;">
                     <span class="path"></span>
                     <span class="file"></span>
                 </a>
@@ -38,7 +38,7 @@
         </output>
         <hr>
         <nav class="auto-rows">
-            <a href="/index.html">/</a>
+            <a href="../">/</a>
         </nav>
     </main>
     <script>
