--- a/styles/fonts/edit.html
+++ b/styles/fonts/edit.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>/styles/fonts/edit</title>
-    <link rel="stylesheet" href="/shared.css">
-    <script src="/shared.js"></script>
+    <link rel="stylesheet" href="../../shared.css">
+    <script src="../../shared.js"></script>
 
 </head>
 
@@ -46,9 +46,9 @@
 
         <br>
         <nav class="auto-rows">
-            <a href="/styles/edit.html" class="back">/styles/</a>
-            <a href="/styles/">/styles</a>
-            <a href="/index.html">/</a>
+            <a href="../edit.html" class="back">/styles/</a>
+            <a href="../">/styles</a>
+            <a href="../../">/</a>
         </nav>
     </main>
 
