--- a/cvs/edit.html
+++ b/cvs/edit.html
@@ -21,38 +21,38 @@
                 <br>
                 <div class="section" data-category="personal">
                     <input type="checkbox" id="personal" name="personal" value="personal" checked>
-                    <a data-section="personal" href="/cvs/personal.html">/cvs/personal</a>
+                    <a data-section="personal" href="./personal.html">/cvs/personal</a>
                 </div>
 
                 <div class="section" data-category="summary">
                     <input type="checkbox" id="summary" name="summary" value="summary" checked>
-                    <a data-section="summary" href="/cvs/summary.html">/cvs/summary</a>
+                    <a data-section="summary" href="./summary.html">/cvs/summary</a>
                 </div>
 
                 <div class="section" data-category="educations">
                     <input type="checkbox" id="educations" name="educations" value="educations" checked>
-                    <a data-section="educations" href="/cvs/education.html">/cvs/education</a>
+                    <a data-section="educations" href="./education.html">/cvs/education</a>
                 </div>
 
                 <div class="section" data-category="jobs">
                     <input type="checkbox" id="jobs" name="jobs" value="jobs" checked>
-                    <a data-section="jobs" href="/cvs/jobs.html">/cvs/jobs</a>
+                    <a data-section="jobs" href="./jobs.html">/cvs/jobs</a>
                 </div>
 
                 <div class="section" data-category="skills">
                     <input type="checkbox" id="skills" name="skills" value="skills" checked>
-                    <a data-section="skills" href="/cvs/skills.html">/cvs/skills</a>
+                    <a data-section="skills" href="./skills.html">/cvs/skills</a>
                 </div>
 
 
                 <div class="section" data-category="interests">
                     <input type="checkbox" id="interests" name="interests" value="interests" checked>
-                    <a data-section="interests" href="/cvs/interests.html">/cvs/interests</a>
+                    <a data-section="interests" href="./interests.html">/cvs/interests</a>
                 </div>
 
                 <div class="section" data-category="references">
                     <input type="checkbox" id="references" name="references" value="references" checked>
-                    <a data-section="references" href="/cvs/references.html">/cvs/references</a>
+                    <a data-section="references" href="./references.html">/cvs/references</a>
                 </div>
 
             </nav>
@@ -142,8 +142,8 @@
         </script>
         <br>
         <nav class="auto-rows">
-            <a href="/cvs/">/cvs</a>
-            <a href="/index.html">/</a>
+            <a href="./">/cvs</a>
+            <a href="../">/</a>
         </nav>
     </main>
 </body>
