--- a/cvs/summary.html
+++ b/cvs/summary.html
@@ -59,9 +59,9 @@
         </script>
         <br>
         <nav class="auto-rows">
-            <a class="back" href="/cvs/edit.html">/cvs/edit</a>
-            <a href="/cvs/">/cvs</a>
-            <a href="/index.html">/</a>
+            <a class="back" href="./edit.html">/cvs/edit</a>
+            <a href="./">/cvs</a>
+            <a href="../">/</a>
         </nav>
     </main>
     <script>
