--- a/cvs/education.html
+++ b/cvs/education.html
@@ -17,7 +17,7 @@
         <hr>
         <template id="education">
             <div class="education" style="display:flex; flex-direction: column;">
-                <a class="id" href="/cvs/education/edit.html">
+                <a class="id" href="./education/edit.html">
                     <span class="path"></span>
                     <br>
                     <span class="file"></span>
@@ -34,9 +34,9 @@
         </output>
         <hr>
         <nav class="auto-rows">
-            <a href="/cvs/edit.html" class="back">/cvs/edit</a>
-            <a href="/cvs/">/cvs</a>
-            <a href="/index.html"></a>
+            <a href="./edit.html" class="back">/cvs/edit</a>
+            <a href="./">/cvs</a>
+            <a href="../">/</a>
         </nav>
         <hr>
         <nav class="auto-rows">
