--- a/cvs/education.html
+++ b/cvs/education.html
@@ -72,7 +72,7 @@
                 warn.innerText = 'Add facts about education first.'
                 window.educations.appendChild(warn)
                 const add = document.createElement('a')
-                add.href = '/facts/education/edit.html'
+                add.href = './education/edit.html'
                 add.innerText = '/facts/education'
                 window.educations.appendChild(add)
                 return
