--- a/cvs/education/edit.html
+++ b/cvs/education/edit.html
@@ -61,10 +61,10 @@
         </script>
         <br>
         <nav class="auto-rows">
-            <a href="/cvs/education.html" class="back">/cvs/education/</a>
-            <a href="/cvs/edit.html" class="back">/cvs/edit/</a>
-            <a href="/cvs/">/cvs</a>
-            <a href="/index.html">/</a>
+            <a href="../education.html" class="back">/cvs/education/</a>
+            <a href="../edit.html" class="back">/cvs/edit/</a>
+            <a href="../">/cvs</a>
+            <a href="../../">/</a>
         </nav>
     </main>
     <script>
