fix another path

--- a/facts/skills.html
+++ b/facts/skills.html
@@ -13,7 +13,7 @@
         <h1>/facts/skills</h1>
         <hr>
         <nav class="auto-rows">
-            <a href="/facts/skills/edit.html">/facts/skills/new</a>
+            <a href="./skills/edit.html">/facts/skills/new</a>
         </nav>
         <hr>
         <template id="category">
@@ -26,7 +26,7 @@
         </template>
         <template id="skill">
             <div class="skill" style="display:flex; flex-direction: column;">
-                <a class="id" href="/facts/skills/edit.html">
+                <a class="id" href="./skills/edit.html">
                     <span class="path"></span>
                     <br>
                     <span class="file"></span>
