fix another path

--- a/facts/interests.html
+++ b/facts/interests.html
@@ -13,7 +13,7 @@
         <h1>/facts/interests</h1>
         <hr>
         <nav class="auto-rows">
-            <a href="/facts/interests/edit.html">/facts/interests/new</a>
+            <a href="./interests/edit.html">/facts/interests/new</a>
         </nav>
         <hr>
         <template id="category">
@@ -26,7 +26,7 @@
         </template>
         <template id="interest">
             <div class="interest" style="display:flex; flex-direction: column;">
-                <a class="id" href="/facts/interests/edit.html">
+                <a class="id" href="./interests/edit.html">
                     <span class="path"></span>
                     <br>
                     <span class="file"></span>
