fix another path

--- a/facts/interests/edit.html
+++ b/facts/interests/edit.html
@@ -60,9 +60,9 @@
         </script>
         <br>
         <nav class="auto-rows">
-            <a href="/facts/interests.html">/facts/interests/</a>
-            <a href="/facts/">/facts</a>
-            <a href="/index.html">/</a>
+            <a href="../interests.html">/facts/interests/</a>
+            <a href="../">/facts</a>
+            <a href="/">/</a>
         </nav>
     </main>
 </body>
